<resources>
    <string name="app_name">Secondone</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="Lblnum1">Número 1</string>
    <string name="Lblnum2">Número 2</string>
    <string name="LblResul">Resultado</string>
    <string name="Hint_num1">Ingrese el número 1</string>
    <string name="Hint_num2">Ingrese el número 2</string>
    <string name="RdSuma">Suma</string>
    <string name="RdResta">Resta</string>
    <string name="RdMultp">Multimplicación</string>
    <string name="RdDiv">División</string>
    <string name="BtnCalcular">Calcular</string>
    <string name="error">Campo Vacio</string>
    <string name="div0">División por 0 no permitida</string>
</resources>
